style.css
@media only screen 
  and (min-device-width: 0px)
  and (max-device-width: 321px)
  and (orientation: portrait) {
  	body {
 		font-size: 7px !important;
 	}
}
@media only screen 
  and (min-device-width: 320px)
  and (max-device-width: 351px)
  and (orientation: portrait) {
  	body {
 		font-size: 8px !important;
 	}
}
@media only screen 
  and (min-device-width: 350px)
  and (max-device-width: 391px)
  and (orientation: portrait) {
  	body {
 		font-size: 9px !important;
 	}
}

@media only screen 
  and (min-device-width: 390px)
  and (max-device-width: 415px)
  and (orientation: portrait) {
  	body {
 		font-size: 10px !important;
 	}
}
/* All mobiles */
@media only screen 
  and (max-device-width: 415px) {
  	body {
  		width: 99%;
 		padding-top: 40px;
 	}
	.left_button {
		top: -3px;
		left: 30px;
	}
	.left_button2 {
		top: -3px;
		left: 78px;
	}
	.left_button3 {
		top: -3px;
		left: 125px;
	}
	.main_table {
		width: 100%;
	}
	.main_table td {
	  	padding-left: 1px !important;
	    padding-right: 1px !important;
	}
	div#logo {
		position: fixed;
		left: 30%;
		top: 0px;
	    z-index: 1;
	}
	#col1 {
		top: 40px !important;
	}
	#col2 {
		top: 40px !important;
	}
	#col3 {
		top: 40px !important;
	}
	#col4 {
		top: 40px !important;
	}
	#col5 {
		top: 40px !important;
	}
	#col6 {
		top: 40px !important;
	}
	#col7 {
		top: 40px !important;
	}						 
}


/* All desktops */
@media only screen
  and (min-device-width: 415px) {
	 div#logo {
		position: absolute;
		left: 73%;
		top: 60px;
	    z-index: 1;
	}
	div#logo img{
	    -webkit-transform: rotate(90deg);
	    -ms-transform: rotate(90deg);
	    transform: rotate(90deg);
	}

	.left_button {
		top: 30px;
		left: -3px;
	}
	.left_button2 {
		top: 78px;
		left: -3px;
		font-size: 18px;
	}
	.left_button3 {
		top: 125px;
		left: -3px;
	}
}

body {
	background-color: black;
	margin-left: auto;
  	margin-right: auto;
}

td {
	text-align: center;
}

input {
	width: 101%;
	background-color: rgb(211, 211, 211);
}

a:link {
    text-decoration: none;
}

a:visited {
    text-decoration: none;
}

a:hover {
    text-decoration: none;
}

a:active {
    text-decoration: none;
}

.title {
	text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
}

.back_menu {
	position: fixed;
	z-index: 9999;
	width: 30px;
	height: 200px;
	overflow: hidden;
	left: 0px;
	top: 20px;
}

.textstyle {
	color: lightgray;
	margin-left: 30px;
  	margin-top: 10px;
}

.editor {
	margin-left: auto;
  	margin-right: auto;
  	width: 1000px;
  	background-color: lightgray;
}

.left_button {
	position: fixed;
	width: 40px;
 	height: 40px;
 	color: black;
 	background: rgb(255, 255, 255);
 	-moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    -khtml-border-radius: 3px;
    border-radius: 3px;
    text-align: center;
    z-index: 15;
    border: 1px solid black;
}

.left_button img {
	max-width: 85%;
	max-height: 85%;
	position: relative;
	top: 50%;
	transform: translateY(-50%);
}

.left_button2 {
	position: fixed;
	width: 40px;
 	height: 40px;
 	color: black;
 	background: rgb(255, 255, 255);
 	-moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    -khtml-border-radius: 3px;
    border-radius: 3px;
    text-align: center;
    z-index: 15;
    border: 1px solid black;
}

.left_button3 {
	position: fixed;
	width: 40px;
 	height: 40px;
 	color: black;
 	background: rgb(255, 255, 255);
 	-moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    -khtml-border-radius: 3px;
    border-radius: 3px;
    text-align: center;
    z-index: 15;
    border: 1px solid black;
}

.left_button3 img {
	max-width: 82%;
	max-height: 82%;
	position: relative;
	top: 50%;
	transform: translateY(-50%);
}

.menu {
	position: fixed;
	left: 57px;
	top: 53px;
	display: none;
	background-color: rgb(211, 211, 211);
	border-collapse: separate;
	border: double 4px rgb(128, 128, 128);
	border-radius: 6px;
	-webkit-border-radius: 6px;
	-moz-border-radius: 5px;
	-khtml-border-radius: 10px;
	padding: 15px;
	text-align: left;
	width: 244px;
	z-index: 20;
}

.menu input[type=checkbox] {
  margin-left: 7px;
  margin-top: 0px;
  width: 10px;
  height: 10px;
}

.menu_title {
	text-align: center;
	display: block;
}

.menu a {
    color: black;
}
.menu div {
	display: none;
	text-align: right;
	margin-left: 5px;
}
.menu input {
	margin-left: 2px;
}

.main_table {
	position: relative;
	-webkit-border-horizontal-spacing: 2px;
	-webkit-border-vertical-spacing: 2px;
	background-color: rgb(211, 211, 211);
	color: black;
	border-collapse: collapse;
	line-height: 1.3;
	margin-left: auto;
  	margin-right: auto;
  	z-index: 10;
}

.main_table tbody tr:hover {
    background-color: darkgray;
}

.main_table tr:first-child {
  	font-weight: bold;
  	background-color: rgb(211, 211, 211) !important;
}

.main_table a {
	color: black;
}

.main_table td {
	border: solid 1px rgb(128, 128, 128);
}

.main_table td:first-child {
  	text-align: left;
  	/*width: 72px;*/
  	color: black;
  	padding-left: 5px;
    padding-right: 5px;
}

.la {
	/*width: 180px;*/
	padding-left: 5px;
    padding-right: 5px;
}

.rep {
	/*width: 145px;*/
	padding-left: 5px;
    padding-right: 5px;
}

.rep select {
	border: 0px;
    outline: 0px;
    background: inherit;
}

.loc {
	/*width: 60px;*/
	padding-left: 5px;
    padding-right: 5px;
	text-decoration: none;
	color: black;
}

.500 {
	/*width: 50px;*/
	padding-left: 5px;
    padding-right: 5px;
	color: black;
}

.el {
	/*width: 46px;*/
	padding-left: 5px;
    padding-right: 5px;
	color: black;
}

.mon {
	/*width: 46px;*/
	padding-left: 5px;
    padding-right: 5px;
	color: black;
}

.red {
	/*width: 46px;*/
	padding-left: 5px;
    padding-right: 5px;
	color: black;
}

.status_bar {
	display: none;
	width: 492px;
	background-color: lightgray;
	height: 20px;
	margin-left: auto;
  	margin-right: auto;
  	margin-top: 20px;
  	color: black;
	padding-left: 10px;
  	
}

.username {
	background-color: lightgray;
	border: none;
	font-weight: bold;
	width: 65px;
}

.register {
	color: lightgray;
	width: 300px;
	margin-left: auto;
  	margin-right: auto;
  	text-align: center;
  	margin-top: 100px;
}

.register input {
	color: black;
}

.register td {
	text-align: left;
	padding-right: 10px;
	padding-bottom: 1px;
}

.timeout {
	-moz-transition: border 60s 0.2s ease;
	-o-transition: border 60s 0.2s ease;
	-webkit-transition: border 60s 0.2s ease;
	border: 1px solid red !important;
}

.forceTimeout {
	border: 1px solid red !important;
}

.simple_div input[type=checkbox] {
    zoom: 1.9;
}

.colons {
	position: fixed;
	background-color: rgba(211, 211, 211, 0);
	top: -3px;
	display: none;
}

#col1 {
	width: 2%;
	top: 1px;
}

#col2 {

	width: 2%;
	top: 1px;
}

#col3 {
	width: 2%;
	top: 1px;
}

#col4 {
	width: 2%;
	top: 1px;
}

#col5 {
	width: 2%;
	top: 1px;
}

#col6 {
	width: 2%;
	top: 1px;
}

#col7 {
	width: 2%;
	top: 1px;
}

.messagebox {
	display: none;
	position: fixed;
	width: 400px;
	height: 200px;
  	color: black;
  	left: 50px;
  	top: 50px;
  	text-align: center;
}

.box {
    height:200px;
    background:#FFF;
    text-align:center;
    position:relative;
    background-color: rgb(211, 211, 211);
}
.effect2 {
  position: relative;
}
.effect2:before, .effect2:after {
  z-index: -1;
  position: absolute;
  content: "";
  bottom: 15px;
  left: 10px;
  width: 50%;
  top: 80%;
  max-width:300px;
  background: #777;
  -webkit-box-shadow: 0 15px 10px #777;
  -moz-box-shadow: 0 15px 10px #777;
  box-shadow: 0 15px 10px #777;
  -webkit-transform: rotate(-3deg);
  -moz-transform: rotate(-3deg);
  -o-transform: rotate(-3deg);
  -ms-transform: rotate(-3deg);
  transform: rotate(-3deg);
}
.effect2:after {
  -webkit-transform: rotate(3deg);
  -moz-transform: rotate(3deg);
  -o-transform: rotate(3deg);
  -ms-transform: rotate(3deg);
  transform: rotate(3deg);
  right: 10px;
  left: auto;
}

.mbclose {
	color: white;
	position: relative;
	left: 234px;
	top: -240px;
	text-shadow: -1px -1px 0 #000,
				 1px -1px 0 #000,
				 -1px 1px 0 #000,
				 1px 1px 0 #000;
}

.mbclose2 {
	color: black;
	position: relative;
	top: -60px;
}

.new {
	border: solid 2px rgb(128, 128, 128);
	padding-top: 40px;
}

.message_title {
	position: relative;
    top: -200px;
}

.umessage {
	max-width: 265px;
	height: 48px;
    width: 160px;
}

#message_div {
	left: 76px;
	top: 72px;
	width: 199px;
}
#text {
	position: relative;
	top: 50%;
	transform: translateY(-50%);
	font-family: cursive;
    font-weight: bold;
    font-size: 22px;
}
.ontop {
	z-index: 25;
}

